# habit-tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  all_data.json  compose.yaml  compose.yml  dump.rdb  env.sample  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  ci.yml.bak
config/: settings.py  urls.py
habit/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/fixtures/: habit_fixture.json  habit_fixtures.xlsx  pleasant_habit_fixture.json
habit/migrations/: 0001_initial.py  0002_initial.py  0003_pleasanthabit_alter_habit_related_habit.py  0004_pleasanthabit_is_pleasant.py  0005_alter_habit_is_pleasant_and_more.py
html/: index.html
nginx/: Dockerfile  nginx.conf
user/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
user/fixtures/: user_fixture.json
user/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_telegram_chat_id.py
